# gsheets-to-csv

./: .gitignore  Dockerfile  Makefile  README.md  action.yml  entrypoint.py  entrypoint.sh  print-csv.sh  pyproject.toml
.github/workflows/: build.yml  test_plugin.yml  test_release.yml
gsheets_to_csv/: __init__.py
tests/: test_gsheets_to_csv.py
