[tool.poetry]
name = "gsheets-to-csv"
version = "0.1.0"
description = ""
authors = ["Max Hoffman <max@dolthub.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gspread = "^3.7.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
