[tool.poetry]
name = "gsheets-to-csv"
version = "0.1.0"
description = ""
authors = ["Max Hoffman <max@dolthub.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gspread = "^3.7.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
mypy = "^0.812"
isort = "^5.8.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
